fixed google-checkstyle errors in FoodStorageTest